[metadata]
name = bmtool
version = 0.1
author = Jun Chen
author_email = junc76@gmail.com
description = 提取C++源文件中的字符串
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Junch/funniestDemo
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = True

[options.entry_points]
console_scripts =
    stringrep = bmtool:main