[metadata]
name = ak47
version = 0.01
author = Jun Chen
author_email = junc76@gmail.com
description = Provide some tools in C++ development
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Junch/ak47
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = True

[options.entry_points]
console_scripts =
    stringrep = ak47.string:main